--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "mocha --colors --watch  test/setup.test.js */*.test.js",
-    "cover": "nodemon --exec nyc --reporter=lcov --reporter=text-summary mocha test/setup.test.js */*.test.js",
+    "test": "mocha --colors --exit --file test/setup.test.js",
+    "cover": "nodemon --exec nyc --reporter=lcov --reporter=text-summary npm test",
     "heroku": "node index.js",
-    "travis": "mocha test/setup.test.js */*.test.js"
+    "travis": "mocha --file test/setup.test.js"
   },
   "author": "Joe Turner <jturner@thinkful.com>",
   "license": "MIT",
@@ -20,10 +20,10 @@
     "morgan": "^1.9.0",
     "pg": "^7.4.1"
   },
-	"devDependencies": {
-		"chai": "^4.1.2",
-		"chai-http": "^3.0.0",
-		"mocha": "^5.0.4",
-		"nyc": "^11.6.0"
-	}
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "mocha": "^5.0.4",
+    "nyc": "^11.6.0"
+  }
 }
