--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "mocha --colors --exit --file test/setup.test.js",
-    "cover": "nodemon --exec nyc --reporter=lcov --reporter=text-summary npm test",
+    "mocha": "mocha --exit --file test/setup.test.js '!(node_modules)/**/*test.js'",
+    "test": "nodemon --exec npm run mocha",
+    "cover": "nodemon --exec nyc --reporter=lcov --reporter=text-summary npm run mocha",
     "heroku": "node index.js",
-    "travis": "mocha --file test/setup.test.js"
+    "travis": "npm run mocha"
   },
   "author": "Joe Turner <jturner@thinkful.com>",
   "license": "MIT",
