Suppress NPM ELIFECYCLEerrors with failing tests
Fixes #5

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "mocha": "mocha --exit --file test/setup.test.js '!(node_modules)/**/*test.js'",
+    "mocha": "mocha --exit --file test/setup.test.js '!(node_modules)/**/*test.js' || true",
     "test": "nodemon --exec npm run mocha",
     "cover": "nodemon --exec nyc --reporter=lcov --reporter=text-summary npm run mocha",
     "heroku": "node index.js",
